Pridaný CORS bypass pre pageArrayLoader, zmeny vzhľadu, opravy chýb

--- a/public/assets/css/ui.index.css
+++ b/public/assets/css/ui.index.css
@@ -15,10 +15,6 @@ p {
     font-family: 'Montserrat', sans-serif !important;
 }
 
-.btn-white {
-    color: #FAFAFA !important;
-}
-
 .icon_button_align-fix {
     margin-right: 4px;
     padding-bottom: 4px;
@@ -28,19 +24,10 @@ p {
     text-align: center;
 }
 
-.mdl-layout__drawer,
-.mdl-layout__drawer>.mdl-navigation_link {
-    background-color: #212121 !important;
-    color: #FAFAFA !important;
-    border-right: 1px solid #000000 !important;
-    border-right-width: 1px;
-    border-right-style: solid;
-    border-right-color: #000000 !important;
-}
-
 .mdl-layout__drawer-button,
-.mdl-layout__drawer-button>i {
-    color: #FAFAFA;
+.mdl-layout__drawer-button>i,
+.mdl-layout-title {
+    color: #212121;
 }
 
 @media only screen and (min-width: 1025px) {
