--- a/public/assets/css/anim.body.circles.css
+++ b/public/assets/css/anim.body.circles.css
@@ -1,6 +1,6 @@
 .area {
-    background: #202020;
-    background: -webkit-linear-gradient(to top, #202020, #000000);
+    background: #FAFAFA;
+    background: -webkit-linear-gradient(to top, #FAFAFA, #FFFFFF);
     width: 100%;
     height: 100vh;
 
@@ -22,7 +22,7 @@
     list-style: none;
     width: 20px;
     height: 20px;
-    background: #FF408130;
+    background: #3F51B530;
     animation: animate 25s linear infinite;
     bottom: -150px;
     text-align: center;
@@ -32,7 +32,7 @@
     left: 25%;
     width: 80px;
     height: 80px;
-    background: #FF408150;
+    background: #3F51B550;
     animation-delay: 0s;
 }
 
@@ -49,7 +49,7 @@
     left: 70%;
     width: 20px;
     height: 20px;
-    background: #FF408150;
+    background: #3F51B550;
     animation-delay: 4s;
 }
 
@@ -65,7 +65,7 @@
     left: 65%;
     width: 20px;
     height: 20px;
-    background: #FF408150;
+    background: #3F51B550;
     animation-delay: 1s;
 }
 
@@ -80,7 +80,7 @@
     left: 35%;
     width: 150px;
     height: 150px;
-    background: #FF408110;
+    background: #3F51B510;
     animation-delay: 7s;
 }
 
@@ -97,7 +97,7 @@
     width: 15px;
     height: 15px;
     animation-delay: 2s;
-    background: #FF408110;
+    background: #3F51B510;
     animation-duration: 35s;
 }
 
